# agentforge

./: .gitignore  AGENTFORGE_SPEC.md
.github/workflows/: ci.yml  release.yml
backend/: config.py  db.py  main.py  requirements.txt
backend/agents/: base.py  claude_agent.py  gemini_agent.py  ollama_agent.py  ollama_cli_agent.py  registry.py
backend/api/: agents.py  broadcast.py  inbox.py  memory.py  projects.py  tasks.py  ws.py
backend/memory/: curator.py  embedder.py  lance_store.py  memory_manager.py  models.py  session_summarizer.py  shadow_agent.py
backend/orchestrator/: decomposer.py  engineering_manager.py  executor.py  intellirouter.py  project_planner.py
backend/pool/: agent_pool.py  workdir.py
backend/tests/: test_base_agent.py  test_claude_agent.py  test_debug_mode.py  test_dispatch.py  test_inbox.py  test_interrupt.py  test_ping.py  test_shadow_agent.py
backend/tests/memory/: test_embedder.py  test_lance_store.py  test_lance_store_scoped.py  test_memory_manager.py  test_shadow_agent.py
backend/tests/orchestrator/: test_decomposer.py  test_executor.py  test_intellirouter.py  (+1 more)
docs/ui-migration/: 00-overview.md  01-layout-shell.md  02-home-and-chat.md  03-screen-polish.md  04-new-project-flow.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: agent_dashboard.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: setup-wsl.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+41 files in other folders)
