[package]
name = "agentforge"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri-build]
windows_sdk_version = "10.0"

[lib]
name = "agentforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
